--- a/java/java-jaxrs-cxf/pom.xml
+++ b/java/java-jaxrs-cxf/pom.xml
@@ -50,44 +50,16 @@
           </execution>
         </executions>
       </plugin>
-      <!-- executes the scala-based tests -->
+      
       <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-        </executions>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.5.1</version>
         <configuration>
-          <configuration>
-            <recompileMode>incremental</recompileMode>
-          </configuration>
-          <jvmArgs>
-            <jvmArg>-Xmx384m</jvmArg>
-          </jvmArgs>
-          <args>
-            <arg>-target:jvm-1.6</arg>
-            <arg>-deprecation</arg>
-          </args>
-          <launchers>
-            <launcher>
-              <id>run-scalatest</id>
-              <mainClass>org.scalatest.tools.Runner</mainClass>
-              <args>
-                <arg>-p</arg>
-                <arg>${project.build.testOutputDirectory}</arg>
-              </args>
-              <jvmArgs>
-                <jvmArg>-Xmx512m</jvmArg>
-              </jvmArgs>
-            </launcher>
-          </launchers>
+          <source>${java-version}</source>
+          <target>${java-version}</target>
         </configuration>
-      </plugin>
+        </plugin>
       <plugin>
         <groupId>com.googlecode.maven-download-plugin</groupId>
         <artifactId>download-maven-plugin</artifactId>
@@ -228,13 +200,6 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- TEST dependencies -->
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>${scala-version}</version>
-    </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -250,13 +215,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.10</artifactId>
-      <version>${scala-test-version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit-version}</version>
@@ -265,7 +223,7 @@
   </dependencies>
 
   <properties>
-    <java-version>1.6</java-version>
+    <java-version>1.7</java-version>
     <springframework-version>3.2.1.RELEASE</springframework-version>
     <cxf-version>2.7.15</cxf-version>
   </properties>
